# tuigreet

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
contrib/: example.config.toml
nix/: package.nix  shell.nix
nix/tests/: default.nix
src/: event.rs  greeter.rs  info.rs  ipc.rs  keyboard.rs  macros.rs  main.rs  power.rs
src/config/: env.rs  mod.rs  parser.rs  schema.rs  theme.rs  watcher.rs
src/integration/: display.rs  mod.rs
src/integration/common/: backend.rs  mod.rs  output.rs
src/ui/: command.rs  i18n.rs  mod.rs  power.rs  processing.rs  prompt.rs  sessions.rs  tests.rs  util.rs
src/ui/common/: masked.rs  menu.rs  style.rs
