[package]
name = "tuigreet"
version = "0.9.1"
authors = ["Antoine POPINEAU <antoine@popineau.eu>"]
edition = "2024"
build = "build.rs"

[features]
default = []
nsswrapper = []

[dependencies]
ansi-to-tui = "7.0.0"
chrono = { version = "0.4.4", features = ["unstable-locales"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
getopts = "0.2.24"
greetd_ipc = { version = "0.10.3", features = ["tokio-codec"] }
i18n-embed = { version = "0.16.0", features = [
  "desktop-requester",
  "fluent-system",
] }
i18n-embed-fl = "0.10.0"
lazy_static = "1.5.0"
nix = { version = "0.30.1", features = ["feature"] }
tui = { package = "ratatui", version = "0.29.0", default-features = false, features = [
  "crossterm",
  "unstable"
] }
rust-embed = "8.9.0"
rust-ini = "0.21.3"
smart-default = "0.7.1"
tokio = { version = "1.48.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "process",
] }
unic-langid = "0.9.6"
zeroize = "1.8.2"
uzers = "0.12.2"
rand = "0.9.2"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tracing = "0.1.40"
utmp-rs = "0.4.0"

[dev-dependencies]
greetd-stub = "0.3.0"
tempfile = "3.10.1"
unicode-width = "0.2.0"

[profile.release]
lto = true


